dist/LineScript-win64-20260616/tests/cases/compile_fail/undeclared_assign.lsc
main() -> i64 do
  x = 1
  return 0
end
